# Cpp_Util

./: CMakeLists.txt  README.md  main.cpp
include/: util.h
source/: CMakeLists.txt  util.cpp
